# concept-guidance

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
concept_guidance/: activations.py  chat_template.py  generation.py  metrics.py  patching.py  utils.py
concept_guidance/data/: open_assistant.py  toxic_completions.py  truthfulqa.py
concept_guidance/eval/: open_assistant.py  toxic_completions.py  truthfulqa.py
concept_guidance/models/: base.py  difference_in_means.py  logistic.py  pca.py  utils.py
concepts/Llama-2-7b-chat-hf/: compliance.safetensors  humor.safetensors  quality.safetensors  truthfulness.safetensors
concepts/Llama-2-7b-hf/: compliance.safetensors  quality.safetensors
concepts/Mistral-7B-Instruct-v0.1/: compliance.safetensors  humor.safetensors  truthfulness.safetensors
concepts/Mistral-7B-v0.1/: compliance.safetensors  quality.safetensors  truthfulness.safetensors
demo/: main.py  requirements.txt
examples/: humor.py  streaming.py
scripts/: classify.py  evaluate.py  generate.py  train.py
trained_concepts/Llama-2-7b-chat-hf/: creativity.safetensors
trained_concepts/Llama-2-7b-hf/: creativity.safetensors  humor.safetensors  truthfulness.safetensors
trained_concepts/Mistral-7B-Instruct-v0.1/: creativity.safetensors  quality.safetensors
trained_concepts/Mistral-7B-v0.1/: creativity.safetensors  humor.safetensors
